IntelliJ Inspection and adding of final